# LeptonIsolation

./: .flake8  .gitignore  .gitmodules  .rnn.yml  LeptonTrackSelector.cxx  LeptonTrackSelector.h  README  README.md  SUSYTools_SusySkimHiggsino_Default.conf  SusySkimHiggsino_Rel21.config  TrackObject.cxx  TrackVariable.cxx  hyperparam.py  isolator.py  trainer.py
Analyzer/: .gitignore  FeatureComparer.py  ROCPlotter.py  compare_ptcone.py  plot_ROC.py
Architectures/: RNN.py
ConeVariables/: compare_ptcone_and_etcone.py
ConvertFromROOT/: convert.py
ConvertROOTToH5/: Convert_to_h5.py  Convert_to_txt.py  convert_to_h5.py
Data/: lepton_track_data.pkl
DataStructures/: LeptonTrackDataset.py
Hyperparameter/: hyperparam.py
Isolator/: HEP.py  compare_ptcone_and_etcone.py  dataloader_test.py  hyperparam.py  isolator.py  isolator_testing.py  torch_bottleneck_profile.txt  utilization.prof
Isolator/Analysis/: ROCPlotter.py  cones.py
Isolator/Architectures/: LSTM.py  RNN.py  test_new_rnn.py
Isolator/DataStructures/: HistoryData.py  LeptonTrackDataset.py
Isolator/HEP/: HEP.py
Isolator/Loader/: loader.py
Isolator/Misc/: combine_h5.py  make_all_samples.py
Isolator/Options/: default_options.py
MiscScripts/: compare_HF_iso_features.py  ptcone_comparison.py
MiscScripts/Tests/: ONNX_Test.py  (+5 more)
ROOTToH5/: README  make_all.sh
SamplePrep/: README  README.md  make_samples.sh
SamplePrep/ROOTToH5/: CMakeLists.txt  README  make_all.sh
SamplePrep/ROOTToH5/dumpxAOD/: CMakeLists.txt
SamplePrep/ROOTToH5/dumpxAOD/Root/: ElectronWriter.cxx  ElectronWriter.h  MuonWriter.cxx  MuonWriter.h  TrackWriter.cxx  TrackWriter.h
SamplePrep/ROOTToH5/dumpxAOD/util/: dump-xaod.cxx
SamplePrep/ROOTToH5/headers/: ElectronFilter.h  ElectronWriter.h  MuonFilter.h  MuonWriter.h  ObjectFilters.h  ObjectWriters.h  TrackFilter.h  TrackWriter.h
SamplePrep/ROOTToH5/src/: ElectronFilter.cxx  ElectronWriter.cxx  MuonFilter.cxx  MuonWriter.cxx  ObjectFilters.cxx  ObjectWriters.cxx  ROOT_to_H5.cxx  TrackFilter.cxx  TrackWriter.cxx
Scripts/: README  calculate_ptcone_and_etcone.py  compare.py  convert.py  convert_root_to_h5.py  convert_root_to_pickle.py  features.py
SusySkim_LeptonTrackSelector/: LeptonTrackSelector.cxx  LeptonTrackSelector.h  TrackObject.cxx
Trainer/: Pytorch.yml  hyperparam.py  trained_model.pth  trainer.py
Training/: .gitignore  README.md  ax_hyper.py  gpu_utilization.prof  hp_tuner.py  hyperparam.py  isolator.py  ray_tune.py
cpp_models/: .gitignore
cpp_models/testing_model/: .gitignore  CMakeLists.txt
cpp_models/testing_model/include/predictor/: data_loader.h
cpp_models/testing_model/src/: data_loader.cpp  main.cpp
env/: Pytorch.yml  README.md  hp_tuning_env.yml  rnn.yml  skynet_conda_env_usage.md
(+241 files in other folders)
